--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    Made with ❤️ of Music, by Naresh!.
+    Made with ❤️ of Music, by Naresh!!
   </footer>
   <script src="index.js"></script>
 </body>
